tests/compile_fail/ignore_duplicate.rs
#[skuld::test]
#[ignore]
#[ignore]
fn duplicate_ignore() {}

fn main() {}
