tests/compile_fail/ignore_duplicate.stderr
error: duplicate #[ignore] attribute
 --> tests/compile_fail/ignore_duplicate.rs:3:1
  |
3 | #[ignore]
  | ^^^^^^^^^
